potential fix for chart navigator pan: disabled liveRedraw of main chart as scrollbar is moved.

--- a/public/css/page.scss
+++ b/public/css/page.scss
@@ -211,7 +211,7 @@ a {
 .topic .controls {
 	width: $firstColumn + 2 * $spacing;
 	float: left;
-	margin: 0 0 $spacing 0;
+	margin: 0 0 $pageMargin 0;
 }
 
 .topic .controls .chooser {
